@@ -14,11 +14,12 @@
 /**
   Order elements top to bottom.
  */
-class Vertical_align_elem : virtual public Score_elem {
+class Vertical_align_element : virtual public Score_elem {
     Link_array<Score_elem> elem_l_arr_;
 public:
     void add(Score_elem*);
     bool contains_b(Score_elem const*)const;
+    Vertical_align_element();
     NAME_MEMBERS();
 protected:
     virtual void do_substitute_dependency(Score_elem*,Score_elem*);
